# leapseconddata

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  Makefile  README.md  conf.py  index.rst  leapsecond.py  leapseconddata.py  leapseconddata_test.py  pyproject.toml  requirements-dev.txt  setup.cfg  testleapseconddata.py
.github/workflows/: release.yml  test.yml
docs/: code.rst  conf.py  developer-guides.rst  guides.rst  index.rst  topics.rst
docs/_ext/: custom_autodoc.py
docs/code/: leapseconddata.rst
docs/developer-guides/: check-date-leap.py  check-date-leap.py.exp  checking-if-date-is-leap.rst  convert-tai-to-utc.py  convert-tai-to-utc.py.exp  convert-utc-to-tai.py  convert-utc-to-tai.py.exp  convert-utc-to-tai.py.license  converting-tai-to-utc.rst  converting-utc-to-tai.rst  obtaining-leap-seconds.rst
docs/guides/: install.rst
docs/topics/: leap-second-distribution.rst  leap-seconds.rst
leapseconddata/: __init__.py  __main__.py
