# SPDX-FileCopyrightText: 2021 Jeff Epler
#
# SPDX-License-Identifier: GPL-3.0-only

[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.0",
    "wheel",
]
build-backend = "setuptools.build_meta"
[tool.setuptools_scm]
[tool.ruff]
line-length=120
[tool.ruff.lint]
select = ["E", "F", "D", "I", "N", "UP", "YTT", "BLE", "B"]
ignore = ["D203", "D213", "D400", "D415"]
