# SPDX-FileCopyrightText: 2021 Jeff Epler
#
# SPDX-License-Identifier: GPL-3.0-only

[metadata]
name = leapseconddata
author = Jeff Epler
author_email = jepler@gmail.com
description = Use the list of known and scheduled leap seconds
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jepler/leapseconddata
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    =.
python_requires = >=3.9
packages = leapseconddata
install_requires =
    click

[options.package_data]
leapseconddata = py.typed

[options.entry_points]
console_scripts =
    leapsecond = leapseconddata.__main__:cli
